# athena

./: .env.sample  Cargo.toml  Makefile  README.md  docker-compose.yaml
bins/athenad/: Cargo.toml
bins/athenad/src/: config.rs  errors.rs  main.rs
bins/athenad/src/handlers/: servers.rs
conf/systemd/: athenad.service
libs/data/: Cargo.toml
libs/data/db/migrations/definitions/: _initial.json
libs/data/db/schemas/: servers.surql
libs/data/src/: conn.rs  lib.rs  modpack.rs  server.rs
