[package]
name = "athenad"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
athena-data = { version = "0.1.0", path = "../../libs/data" }
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "process", "rt-multi-thread", "tokio-macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
